# process-design-2026-pb

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
data/: chem_contest.md
data/diagnostics/: process_design_0428_inspection.json  process_design_0428v2_inspection.json  process_design_0428v3_inspection.json  process_design_0430v3_inspection.json  process_design_0430v4_inspection.json
data/hysys/: decanter.hsc  process_design_0428.hsc  process_design_0428v2.hsc  process_design_0428v3.hsc  process_design_0428v4.hsc  process_design_0430v3.hsc  process_design_0430v4.hsc  process_design_0430v5.hsc  process_design_0430v6.hsc  process_design_0513v2.hsc  process_design_0515v1.hsc  process_design_0515v2.hsc  process_design_0520v3.hsc  process_design_0520v5.hsc  process_design_0520v6.hsc  process_design_0524v4.hsc  process_design_0524v5.hsc  process_design_best0527v1.hsc  process_design_best0529v1.hsc  process_design_best0601v2.hsc  process_design_best0604v1.hsc  process_design_best0609v1.hsc  process_design_best0612v1.hsc
docs/: cost.md  documentation-policy.md  optimization.md  overview.md  pfr.md  physical_property.md  radial-flow-reactor.md  reactor.md
docs/reports/: 20260416_01_reactor-docs-policy-and-hysys-bridge.md  20260416_01_reactor-hysys-bridge-minimum.md  20260424_01_reactor-pre-optimization-strategy.md  20260428_01_reactor-six-reaction-refactor.md  20260430_01_fast-feed-tuning.md  20260507_01_optimization-implementation-plan.md  20260514_01_plant-convergence.md  20260518_01_radial-flow-reactor-design.md  20260520_01_pfr-pressure-drop-log-design.md  20260521_01_decanter-optimization-script-design.md  20260521_02_radial-velocity-and-simple-optuna-design.md  20260521_03_fast-production-target-hysys-session.md  20260521_04_fast-plant-economic-optuna-design.md  20260524_01_decanter-two-stage-cooling-design.md  20260525_01_distillation-partial-optimization-design.md  20260529_01_hysys-cost-interface-design.md  20260531_01_reactor-pareto-optuna-design.md  20260531_02_reactor-pareto-v2-design.md  20260601_01_reactor-rk4-numba-switch.md  20260602_01_whole-plant-cost-evaluation-minimum-design.md  20260604_01_hysys-post-convergence-control-write-design.md  20260605_01_whole-plant-optuna-output-design.md  20260608_01_whole-plant-fixed-radial-geometry.md  20260608_02_hysys-global-timeout-design.md  (+4 more)
scripts/: check_hysys_connection.py  export_code_snapshot.py  inspect_hysys_case.py  read_hysys_equipment.py  run_fixed_plant_convergence.py  run_plant_once.py  run_reactor_case.py  run_reactor_to_decanter.py
tests/: test_plant_convergence.py  test_plant_economics.py  test_plant_feed_tuning.py  test_reactor_simulator.py
(+153 files in other folders)
