[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "process-design-2026"
version = "0.1.0"
description = "Process design workspace for EB to styrene project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
run-reactor-case = "process_sim.cli:run_reactor_case_main"

[tool.hatch.build.targets.wheel]
packages = ["src/process_sim"]
