[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "process-design-2026"
version = "0.1.0"
description = "Process design workspace for EB to styrene project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.9",
    "numba>=0.65.1",
    "optuna>=4.8.0",
    "pydantic>=2.13.4",
    "pywin32>=311",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "pytest>=9.0.3",
    "pyright>=1.1.409",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
include = ["src"]
exclude = ["scripts", "tests", "**/node_modules", "**/__pycache__", "**/.*", ".venv"]

[project.scripts]
run-reactor-case = "process_sim.cli:run_reactor_case_main"
run-plant-once = "process_sim.plant.runner:run_plant_once_main"
tune-plant-feed = "process_sim.plant.production_target:tune_fresh_feed_fast_main"
run-plant-convergence = "process_sim.plant.convergence:run_plant_convergence_main"
fast-production-target = "process_sim.plant.fast_production_target:fast_production_target_main"
fast-plant-convergence = "process_sim.plant.fast_convergence:fast_plant_convergence_main"

[tool.hatch.build.targets.wheel]
packages = ["src/process_sim"]
